--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.3.0"
+    "@fastify/type-provider-json-schema-to-ts": "^2.1.1",
+    "fastify": "^4.5.2"
+  },
+  "devDependencies": {
+    "typescript": "^4.7.4"
   }
 }
